# battleship-rl

./: .gitignore  .pre-commit-config.yaml  Dockerfile.trainer  Makefile  README.md  TODO.md  docker-compose.training.yml  monitoring_diag.txt  pyproject.toml  requirements.txt
docs/: TODO.md  architecture.md  battleship_rules.md  observability_catalogue.md  otel_endpoints.md  slo_sli_reference.md  training_config.md
docs/adr/: 0001-core_stack.md  0002-rl_algorithm.md
docs/ml/: gymnasium_environment.md
ops/: grafana-dashboad.yaml  grafana-dashboard.json
ops/alloy/: config.river
ops/loki/: config.yml
ops/otel/: config.yaml
ops/prometheus/: prometheus.yml
ops/tempo/: tempo.yaml
scripts/: auto_train_pipeline.py  check_prereqs.py  monitoring_diag.sh
src/battleship/: cli.py
src/battleship/ai/: __init__.py  agent.py  environment.py  instrumented_agent.py  training.py
src/battleship/engine/: board.py  game.py  instrumented_game.py  ship.py
src/battleship/telemetry/: __init__.py  config.py  logger.py  metrics.py  tracer.py
tests/: test_project_structure.py
tests/ai/: test_agent.py  test_environment.py  test_training_loop.py
tests/engine/: test_board.py  test_game.py  test_ship.py
tests/telemetry/: test_instrumentation.py
